# Helios

./: Dockerfile  INTENT.md  LICENSE  MANIFEST.in  README.md  deploy.sh  docker-compose.yml  pyproject.toml  setup.py
config/: default_sim_config.yaml  ml_models.json
src/analysis/: simulation_analyzer.py
src/helios/analysis/: hpm_effects.py
src/helios/armament/: __init__.py  acquisition_calculator.py  battlefield_spectrum.py  design.py  effects.py  emp_analysis.py  eob_analysis.py  guidance.py  hardening.py  jamming_predictor.py  rf_guided_munition.py  targeting.py  terrain_propagation.py
src/helios/automation/: __init__.py  predefined_workflows.py  workflow_engine.py
src/helios/cli/: analyzer.py  simulator.py
src/helios/cognitive/: data_structures.py  engine.py  ml_integration.py  spectrum_sensing.py
src/helios/core/: data_structures.py  interfaces.py
src/helios/design/: __init__.py  component_library.py  design_validation.py  military_component_library.py  pulse_amplifier_designer.py  rf_components.py  rf_system_design.py  weapon_antenna_designer.py
src/helios/dsp/: __init__.py  filters.py  modulation.py  resampling.py  spectral.py  windows.py
src/helios/ecm/: countermeasures.py  techniques.py
src/helios/effects/: cascading_effects.py  component_vulnerability.py  effects_database.py  electronic_vulnerability.py  predictor.py  rf_effects.py  susceptibility.py  system_effects.py
src/helios/environment/: advanced_propagation.py  clutter.py  continuous_clutter.py  detailed_coupling.py  em_coupling.py  em_structures.py  fading.py  (+10 more)
tests/: conftest.py
(+59 files in other folders)
